--- a/themes/goodtimes/css/style.css
+++ b/themes/goodtimes/css/style.css
@@ -126,8 +126,7 @@ body {
   overflow: hidden;
 }
 .highlighted {
-  margin: auto;
-  width: 600px;
+  text-align: center;
 }
 .highlighted .field--name-body {
   text-align: center;
