--- a/themes/goodtimes/css/style.less
+++ b/themes/goodtimes/css/style.less
@@ -157,8 +157,7 @@
 }
 
 .highlighted{
-    margin:auto;
-    width:600px;
+    text-align:center;
     .field--name-body{
         text-align: center;
         font-size:18pt;
