--- a/themes/goodtimes/templates/node.html.twig
+++ b/themes/goodtimes/templates/node.html.twig
@@ -65,7 +65,7 @@
  * @ingroup themeable
  */
 #}
-<article{{ attributes }}>
+<article{{ attributes.addClass('container-fluid') }} class='container-fluid'>
 
 {# mikedice: default always shows the title (called label for some reason) #}
   {{ title_prefix }}
