--- a/themes/goodtimes/templates/page--front.html.twig
+++ b/themes/goodtimes/templates/page--front.html.twig
@@ -8,7 +8,9 @@
 {# Highlighted #}
 {% if page.highlighted %}
     {% block highlighted %}
-    <div class="highlighted">{{ page.highlighted }}</div>
+    <div class="row">
+    <div class='col-md-offset-3 col-md-6 highlighted'>{{ page.highlighted }}</div>
+    </div>
     {% endblock %}
 {% endif %}
 
